<resources>
    <string name="app_name">创享e家</string>
    <string name="agora_app_id">404bdbf5706a4572969c4797903e60a7</string>
    <string name="versions">2.0.0</string>
    <string name="app_slogan">乐创e家         智享生活</string>
    <string name="company_name">兴业达科技有限公司</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="quit">退出</string>
    <string name="cancel">取消</string>
    <string name="edittext_length_11">11</string>
    <string name="edittext_length_6">6</string>
    <string name="edittext_length_16">16</string>
    <string name="more_data">加载更多</string>
    <string name="load_more">加载更多</string>
    <string name="connection_timeout">连接超时</string>
    <string name="enter_account">请输入帐号</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="hint">提示</string>
    <string name="is_quit">是否退出e家</string>
    <string name="find_password">找回密码</string>
    <string name="verification_code_error">验证码错误,请重新输入</string>
    <string name="enter_pwd_again">请再次输入密码</string>
    <string name="wrong_pwd">两次输入密码不一致，请重新输入</string>
    <string name="username_not_null">用户名不能为空,请输入</string>
    <string name="pwd_not_null">密码不能为空,请输入</string>
    <string name="pwd_not_enough">密码不能少于六位，请重新输入</string>
    <string name="phone_error">手机号码错误</string>
    <string name="network_error">网络不可用</string>
    <string name="information">个人信息</string>
    <string name="set">系统设置</string>
    <string name="change_pwd">修改密码</string>
    <string name="about_app">关于e家</string>
    <string name="switchover_login">切换用户</string>
    <string name="for_photo_album">从相册选择</string>
    <string name="photograph">拍照</string>
    <string name="set_head_portrait">设置头像</string>
    <string name="set_head_failure">设置头像失败</string>
    <string name="set_prosperity">修改成功</string>
    <string name="monitoring">监控</string>
    <string name="relieve_bind">解除绑定</string>
    <string name="relieve_bind_prosperity">解除绑定成功</string>
    <string name="whether_relieve_bind">是否解除该小区的绑定?</string>
    <string name="is_remove_camera">是否删除摄像头</string>
    <string name="is_remove_cateye">是否删除猫眼</string>
    <string name="is_remove_park">是否删除停车场</string>
    <string name="confirm_relieve_bind">该小区是默认小区，是否删除?</string>
    <string name="not_bind_facility">该栋数未绑定设备</string>
    <string name="open_door_prosperity">开门成功</string>
    <string name="not_null_house_number">门牌号不能为空，请重新输入</string>
    <string name="add_prosperity">添加成功</string>
    <string name="wait_check">添加成功，请等待审核</string>
    <string name="playback_failed">监控被占用，请稍后再试</string>
    <string name="play_address_error">视频地址错误</string>
    <string name="call_not_connect">呼叫未接通</string>
    <string name="call_not_connect_hint">您有一次门禁呼叫未接通</string>
    <string name="not_connect_message">未接通消息</string>
    <string name="not_notification">暂无通知</string>
    <string name="not_advertisement">暂无广告</string>
    <string name="complains_records">建议记录</string>
    <string name="maintenance_record">维修记录</string>
    <string name="village_notice">小区通告</string>
    <string name="suggested_history">建议历史</string>
    <string name="maintain_history">维修历史</string>
    <string name="notification">通知</string>
    <string name="suggested">建    议</string>
    <string name="suggest">建议/维修</string>
    <string name="suggested_record">建议记录</string>
    <string name="maintain">维    修</string>
    <string name="service_phone">服务电话</string>
    <string name="maintain_record">维修记录</string>
    <string name="picture_for_5">图片数5张已满</string>
    <string name="remove_picture">确定移除此图片</string>
    <string name="input_content">请输入内容</string>
    <string name="uploaded_successfully">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="password_changed">密码修改成功</string>
    <string name="already_add">已添加</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="choose_modify">请选择修改</string>
    <string name="input">请输入</string>
    <string name="message_center">消息</string>
    <string name="individual">个人</string>
    <string name="systematic">系统</string>
    <string name="individual_information">个人消息</string>
    <string name="systematic_information">系统消息</string>
    <string name="message_status">是否接通 :</string>
    <string name="door_status">是否开门 :</string>
    <string name="initiator">发起人 :</string>
    <string name="receiver">接受者 :</string>
    <string name="connect">接通</string>
    <string name="no_connect">未接通</string>
    <string name="open_door">开门</string>
    <string name="no_open_door">未开门</string>
    <string name="is_delete">是否删除？</string>
    <string name="not_check">审核未通过</string>
    <string name="all">所有</string>
    <string name="seek_hint">请输入要搜索的小区名字</string>
    <string name="more">其他</string>
    <string name="delete">删除</string>
    <string name="accomplish">完成</string>
    <string name="check_all">全选</string>
    <string name="guide_into_button">开始体验</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="login_forgetpwd">忘记密码</string>
    <string name="login_register">注册新用户</string>
    <string name="register_phone_hint">请输入手机号码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_getcode_text">获取验证码</string>
    <string name="setnewpwd_text">设置新密码</string>
    <string name="setnewpwd_newpwd_hint">请输入新密码</string>
    <string name="setnewpwd_newowd_again_hint">请再次输入新密码</string>
    <string name="info_title">注册帐号</string>
    <string name="info_name_text">用户名</string>
    <string name="info_name_hint">请输入呢称</string>
    <string name="info_email_text">邮箱</string>
    <string name="info_email_hint">请输入邮箱</string>
    <string name="info_pwd_text">密码</string>
    <string name="info_pwd_hint">请输入密码</string>
    <string name="info_username_hint">请输入用户名</string>
    <string name="info_OKpwd_text">确认密码</string>
    <string name="info_OKpwd_hint">请再次输入密码</string>
    <string name="info_sex_text">选择性别</string>
    <string name="hg_door_text">门禁</string>
    <string name="hg_tenement_text">物业</string>
    <string name="hg_life_text">直播</string>
    <string name="hg_info_text">个人</string>
    <string name="door_title_text">我的设备</string>
    <string name="door_add_hint">请绑定小区</string>
    <string name="door_adapter_left">【</string>
    <string name="door_adapter_right">】</string>
    <string name="door_adapter_text">门禁</string>
    <string name="door_add_text">绑定小区</string>
    <string name="door_add_xiaoqutext">小区</string>
    <string name="door_add_qishutext">期数</string>
    <string name="door_add_dongshutext">栋数</string>
    <string name="door_add_doornubtext">门牌</string>
    <string name="door_add_owner">业主</string>
    <string name="door_add_relation">家属</string>
    <string name="door_add_tenant">租客</string>
    <string name="door_rtmp_title">门禁监控</string>
    <string name="door_rtmp_hang_up">挂断</string>
    <string name="door_rtmp_answer">开门</string>
    <string name="door_rtmp_start">接通</string>
    <string name="door_hint">您家里有客人来了哦!</string>
    <string name="RT_complaint_text">意见/建议</string>
    <string name="RT_maintain_text">物业报修</string>
    <string name="RT_transfer_text">便民缴费</string>
    <string name="transfer">缴      费</string>
    <string name="RT_about_text">关于</string>
    <string name="RT_inform_text">通知</string>
    <string name="RT_cas_type_text">类型</string>
    <string name="RT_cas_title_text">标题</string>
    <string name="RT_cas_title_hint">请输入标题</string>
    <string name="RT_cas_content_text">内容</string>
    <string name="RT_cas_upload_text">上传图片</string>
    <string name="RT_cas_history_text">暂无数据</string>
    <string name="RT_notice_time_text">发布时间 :</string>
    <string name="life_title_text">商圈列表</string>
    <string name="menu_name_hint">用户名 : </string>
    <string name="menu_set_hint">设置</string>
    <string name="menu_about_hint">关于</string>
    <string name="menu_setnewpwd_hint">修改密码</string>
    <string name="menu_versions_text">versions :</string>
    <string name="menu_quit_button">退出登录</string>
    <string name="menu_setinfo_title_hint">修改信息</string>
    <string name="menu_setinfo_name_text">真实姓名</string>
    <string name="menu_setinfo_username_text">用户名</string>
    <string name="menu_setinfo_phone_text">手机号码</string>
    <string name="menu_setinfo_xiaoqu_text">默认小区</string>
    <string name="menu_setinfo_reserve_phone_text">备用号码</string>
    <string name="menu_setinfo_e_mail_text">邮箱</string>
    <string name="menu_setinfo_sex_text">性别</string>
    <string name="menu_setinfo_type_text">当前用户类型</string>
    <string name="setinfo_share_type">分享类型</string>
    <string name="menu_setinfo_setpwd_text">修改密码</string>
    <string name="menu_setinfo_confirm_text">确定修改</string>
    <string name="menu_change_title_hint">修改新密码</string>
    <string name="menu_change_oldpwd_hint">请输入旧密码</string>
    <string name="menu_change_newpwd_hint">请输入新密码</string>
    <string name="menu_change_again_newpwd_hint">请再次输入新密码</string>
    <string name="menu_set_title_text">设置</string>
    <string name="menu_set_informationhint_text">消息提醒</string>
    <string name="menu_set_voice_text">声音</string>
    <string name="menu_set_shake_text">震动</string>
    <string name="menu_set_rtmpnetwork_text">视频网络设定</string>
    <string name="menu_set_wifi_text">wifi</string>
    <string name="menu_set_3G_4G_text">3G/4G</string>
    <string name="menu_set_rtmpplay_text">呼叫设置</string>
    <string name="menu_set_receivecall_text">接听呼叫</string>
    <string name="menu_set_opendoor_text">一键开门</string>
    <string name="menu_set_add_opendoor_text">添加一键开门</string>
    <string name="menu_about_title_text">关于我们</string>
    <string name="menu_about_contact_text">联系我们 : </string>
    <string name="menu_about_number_text">0731–22393818</string>
    <string name="menu_about_know_text">了解我们: </string>
    <string name="menu_about_url_text">http://www.xyd999.com</string>
    <string name="update_notification_text">下载新版本</string>
    <string name="update_update_text">下载状态</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">加载更多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新</string>
    <string name="p2refresh_doing_end_refresh">加载中</string>
    <string name="p2refresh_refresh_lasttime">最近更新</string>
    <string name="smart_home">智能家居</string>
    <string name="rebinding">重新绑定</string>
    <string name="infomation_detection">信息验证</string>
    <string name="add_park">添加车辆信息</string>
    <string name="share_equipment">分享设备</string>
    <string name="describe">描述</string>
    <string name="door_hint_text">您的账号已被冻结，有疑问请联系物业管理员</string>
    <string name="account_number">账号</string>
    <string name="user_type">用户类型</string>
    <string name="please_choose">请选择</string>
    <string name="loadin">loading...</string>
    <string name="notice">通      告</string>
    <string name="save">保存</string>
    <string name="add_title">请选择设备添加方式</string>
    <string name="method_one">方式一：已联网设备</string>
    <string name="method_two">方法二：无线配置</string>
    <string name="cloudview_number">请输入云视通号码</string>
    <string name="Sound_waves_set">声波配置</string>
    <string name="non_networked">未联网设备</string>
    <string name="jv_siren_playback">报警回放</string>
    <string name="jv_rewind_today">当天</string>
    <string name="jv_rewind_three_days">最近三天</string>
    <string name="jv_rewind_select">自定义</string>
    <string name="safety_guard_time">安全防护时间段</string>
    <string name="start_time_text">00:00</string>
    <string name="stop_time_text">23:59</string>
    <string name="all_day">全天</string>
    <string name="start_time">开始时间</string>
    <string name="stop_time">结束时间</string>
</resources>