<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EDECE8"
     >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_orange"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" 
        >

    <TextView
        android:id="@+id/add_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/back"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20" 
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/add_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20" />
    </RelativeLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/method_one"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white">

    <EditText
        android:id="@+id/camera_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cloudview_number"
        android:background="@null"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"

        />
    <TextView
        android:id="@+id/camera_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_alignParentRight="true"
        android:background="@color/theme_orange"
        android:textColor="@color/white"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="invisible"
        />
    </RelativeLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/method_two"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <RelativeLayout 
        android:id="@+id/add_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        >
        
        <ImageView 
            android:id="@+id/add_wifi_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sound_wave_img"
            android:contentDescription="@null"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/add_wifi_image"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true">
            <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sound_waves_set"
        android:textSize="@dimen/text_size_18"/>
            <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/non_networked"
        android:textSize="@dimen/text_size_15"
        android:textColor="@color/gray"/>
        </LinearLayout>
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"/>
    </RelativeLayout>
    
   
    
</LinearLayout>