<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="10%"
        android:background="@color/theme_orange"
        android:textColor="@color/white"
        android:text="@string/safety_guard_time"
        android:textSize="20sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/guard_time_back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_heightPercent="10%"
        app:layout_marginLeftPercent="3%"
        android:drawableLeft="@mipmap/back"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <com.xingyeda.ehome.view.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginTopPercent="12%"
        android:orientation="vertical">
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/guard_time_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="@dimen/text_size_20"
                app:layout_marginLeftPercent="3%"/>
            <TextView
                android:id="@+id/guard_time_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time_text"
                android:textSize="@dimen/text_size_20"
                android:layout_alignParentRight="true"
                app:layout_marginRightPercent="3%"/>
        </android.support.percent.PercentRelativeLayout>
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/guard_time_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            app:layout_marginTopPercent="1%"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_time"
                android:textSize="@dimen/text_size_20"
                app:layout_marginLeftPercent="3%"/>
            <TextView
                android:id="@+id/guard_time_stop_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_time_text"
                android:textSize="@dimen/text_size_20"
                android:layout_alignParentRight="true"
                app:layout_marginRightPercent="3%"/>
        </android.support.percent.PercentRelativeLayout>

    <com.xingyeda.ehome.view.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="15%">
        <Button
            android:id="@+id/guard_time_all_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:layout_marginLeftPercent="5%"
            android:text="@string/all_day"
            android:background="@drawable/button_blue"
            android:textColor="@color/theme_orange"/>
        <Button
            android:id="@+id/guard_time_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:layout_marginRightPercent="5%"
            android:text="@string/save"
            android:background="@drawable/button_theme"
            android:textColor="@color/white"/>

    </com.xingyeda.ehome.view.PercentLinearLayout>
    </com.xingyeda.ehome.view.PercentLinearLayout>


</android.support.percent.PercentRelativeLayout>
