<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
       <TextView
            android:id="@+id/my_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/back"
            android:text="@string/back"
            android:textSize="@dimen/text_size_20" 
            android:background="@color/theme_orange"
            android:textColor="@color/white"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/my_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:textSize="@dimen/text_size_30"
            android:background="@color/theme_orange"
            android:textColor="@color/white"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:paddingLeft="10dp"
            />
   <LinearLayout 
       android:id="@+id/my_set"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone">
       
        <TextView
            android:id="@+id/my_setting" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_set_hint"
            android:textSize="@dimen/text_size_20"
            android:padding="20dp"
            />
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DEDFDF"/>
        <TextView
            android:id="@+id/my_setnewpwd" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_setnewpwd_hint"
            android:textSize="@dimen/text_size_20"
            android:padding="20dp"
            />
         <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DEDFDF"/>
        <TextView 
            android:id="@+id/my_switchover_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchover_login"
            android:textSize="@dimen/text_size_20"
            android:padding="20dp"
            />
   </LinearLayout>
    <LinearLayout 
       android:id="@+id/my_suggest_maintain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
       
        <TextView 
            android:id="@+id/my_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggested"
            android:textSize="@dimen/text_size_20"
            android:padding="20dp"
            />
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DEDFDF"/>
        <TextView 
            android:id="@+id/my_maintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintain"
            android:textSize="@dimen/text_size_20"
            android:padding="20dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DEDFDF"/>
        <TextView
            android:id="@+id/my_service_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_phone"
            android:textSize="@dimen/text_size_20"
            android:padding="20dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DEDFDF"/>
        <TextView
            android:id="@+id/my_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textSize="@dimen/text_size_20"
            android:padding="20dp"
            />
   </LinearLayout>
    

</LinearLayout>
