<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F7F7F7"
    >
    <TextView
        android:id="@+id/rewind_back"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="10%"
        android:background="@color/theme_orange"
        android:textColor="@color/white"
        android:text="@string/jv_siren_playback"
        android:textSize="20sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/rewind_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_heightPercent="10%"
        app:layout_marginLeftPercent="3%"
        android:drawableLeft="@mipmap/back"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <com.xingyeda.ehome.view.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="12%"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/rewind_today"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/theme_orange"
            android:text="@string/jv_rewind_today"
            android:textColor="@color/white"
            android:layout_marginRight="2dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/rewind_three_days"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/playback"
            android:text="@string/jv_rewind_three_days"
            android:textColor="@color/theme_orange"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/rewind_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/playback"
            android:layout_marginLeft="2dp"
            android:text="@string/jv_rewind_select"
            android:textColor="@color/theme_orange"
            android:gravity="center"/>
    </com.xingyeda.ehome.view.PercentLinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rewind_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_marginTopPercent="22%"
        android:padding="5dp"
        android:background="#F7F7F7"/>
    <ImageView
        android:id="@+id/rewind_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_marginTopPercent="22%"
        android:background="@mipmap/no_data"
        />




</android.support.percent.PercentRelativeLayout>